# PriceCompare

./: Amazon.py  Flipkart.py  FlipkartToAmazon.py  README.md  amazonToFlipkart.py  app.py  main.py  pyproject.toml  requirements.txt
UI/: index.html  package-lock.json  package.json
UI/src/: App.css  App.jsx  index.css
