[project]
name = "pricecompare"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Ashish",email = "71788323+rghvgrv@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
